<resources>
    <string name="app_name">Cadastro</string>
    <string name="name_text_view">Nome completo</string>
    <string name="name_edit_text">Informe seu nome</string>
    <string name="phone_text_view">Telefone</string>
    <string name="phone_edit_text">Informe seu telefone</string>
    <string name="mail_text_view">E-mail</string>
    <string name="mail_edit_text">Informe seu e-mail</string>
    <string name="message_checkbox">Ingressar na lista de e-mails?</string>
    <string name="sex_text_view">Sexo</string>
    <string name="man_radio">Masculino</string>
    <string name="woman_radio">Feminino</string>
    <string name="city_text_view">Cidade</string>
    <string name="city_edit_text">Informe sua cidade</string>
    <string name="uf_text_view">UF</string>
    <string-array name="estate_sp">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espirito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="clear_btn">Limpar</string>
    <string name="save_btn">Salvar</string>
</resources>